--- a/LuyenTap_If_else/Bai1.html
+++ b/LuyenTap_If_else/Bai1.html
@@ -1,25 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
 <script>
-    let year = parseInt(prompt("Enter a year"));
-    if (year % 4 == 0) {
-        if (year % 100 == 0) {
-            if (year % 400 == 0) {
-                alert(year + " is a leap year");
-            } else {
-                alert(year + " is NOT a leap year");
-            }
-        } else {
-            alert(year + " is a leap year");
-        }
+    let value = prompt('What is the "official" name of JavaScript?', '');
+    if (value == 'ECMAScript') {
+        alert('Right!');
     } else {
-        alert(year + " is NOT a leap year");
+        alert("You don't know? ECMAScript!");
     }
+
 </script>
 </body>
-</html>
