--- a/LuyenTap_If_else/Bai1.html
+++ b/LuyenTap_If_else/Bai1.html
@@ -9,12 +9,21 @@
 </head>
 <body>
 <script>
-    let value = prompt('What is the "official" name of JavaScript?', '');
-    if (value == 'ECMAScript') {
-        alert('Right!');
-    } else {
-        alert("You don't know? ECMAScript!");
-    }
+    let userName = prompt("Who's there?", '');
+    if (userName == 'Admin') {
 
+    } else if (userName == null) {
+        alert('Canceled');
+    } else {
+        alert("I don't know you");
+    }
+    let pass = prompt('Password?', '');
+    if (pass == 'TheMaster') {
+        alert('Welcome!');
+    } else if (pass == null) {
+        alert('Canceled.');
+    } else {
+        alert('Wrong password');
+    }
 </script>
 </body>
