bai-if-sang-switch

--- a/LuyenTap_If_else/Bai1.html
+++ b/LuyenTap_If_else/Bai1.html
@@ -5,25 +5,34 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>bai if sang switch</title>
 </head>
 <body>
-<script>
-    let userName = prompt("Who's there?", '');
-    if (userName == 'Admin') {
 
-    } else if (userName == null) {
-        alert('Canceled');
-    } else {
-        alert("I don't know you");
+<script>
+    /*đổi if sang switch
+    let a = prompt('a?', '');
+
+    if (a == 0) {
+        alert(0);
     }
-    let pass = prompt('Password?', '');
-    if (pass == 'TheMaster') {
-        alert('Welcome!');
-    } else if (pass == null) {
-        alert('Canceled.');
-    } else {
-        alert('Wrong password');
+
+    if (a == 1) {
+        alert(1);
     }
+
+    if (a == 2 || a == 3) {
+        alert('2,3');
+    }*/
+let a = prompt('a?','')
+switch (a) {
+    case 0:
+    case 1:
+    case 2:
+    case 3:
+        alert('0,1,2,3');
+        break;
+}
 </script>
 </body>
+</html>
