--- a/LuyenTap_If_else/Bai1.html
+++ b/LuyenTap_If_else/Bai1.html
@@ -5,35 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>bai if sang switch</title>
+    <title>bai for</title>
 </head>
 <body>
+<h2>JavaScript Loops</h2>
+<p id="demo"></p>
 
-<script>
-    /*đổi if sang switch
-    let a = prompt('a?', '');
-
-    if (a == 0) {
-        alert(0);
-    }
-
-    if (a == 1) {
-        alert(1);
-    }
-
-    if (a == 2 || a == 3) {
-        alert('2,3');
-    }*/
-let a = prompt('a?','')
-switch (a) {
-    case 0:
-    case 1:
-    case 2:
-    case 3:
-        alert('0,1,2,3');
-        break;
-}
-</script>
 </body>
 
 </html>
